--- a/style/style.css
+++ b/style/style.css
@@ -13,7 +13,6 @@ header {
   background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
     url("../assets/hero_header-kayakers.jpg");
   min-height: 500px;
-  
 }
 
 h1 {
@@ -83,7 +82,7 @@ nav {
 main {
   grid-area: content;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 100px 7fr;
   grid-template-areas:
     "h2 h2 h2"
@@ -92,9 +91,7 @@ main {
     "lead lead lead"
     "lead-info lead-info lead-info"
     "book book book"
-    "bk-info bk-info bk-info"
-    
-    ;
+    "bk-info bk-info bk-info";
   text-align: center;
   background-color: #f4f4f4;
   padding: 20px;
@@ -120,10 +117,10 @@ h2 {
   justify-self: center;
 }
 
-article {
+/* article {
   background: white;
   padding: 20px;
-}
+} */
 
 h3 {
   font-size: 36px;
@@ -148,7 +145,6 @@ button:hover {
   background: rgb(18, 86, 126);
   border: 2px solid rgb(18, 86, 126);
   cursor: pointer;
-
 }
 .left-photo img {
   grid-area: top-left;
@@ -166,7 +162,6 @@ button:hover {
 .lead {
   grid-area: lead;
   padding: 20px;
-  
 }
 
 .lead_info {
@@ -186,9 +181,9 @@ button:hover {
 }
 
 .book {
-    margin-top: 10px;;
-    grid-area: book;
-    padding:20px;
+  margin-top: 10px;
+  grid-area: book;
+  padding: 20px;
 }
 .book_title {
   font-family: Montserrat;
@@ -212,7 +207,6 @@ button:hover {
   color: white;
   padding: 10px;
   transition: 0.4s;
-  
 }
 
 footer {
@@ -222,7 +216,7 @@ footer {
 }
 .wrapper {
   display: grid;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 1fr 1fr;
   grid-template-rows: 110px auto;
   grid-template-areas:
     "nav  nav"
@@ -231,55 +225,49 @@ footer {
     "footer  footer";
 }
 
-
 /* -----------------MODAL------------ */
 
 .modal_bg {
-    height: 100vh;
-    width: 100%;
-    background-color:rgba(0, 0, 0, 0.7);
-    position: fixed;
-    top: 0;
-    display: grid;
-    justify-content: center;
-    align-items: center;
-    display: none;
+  height: 100vh;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  position: fixed;
+  top: 0;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  display: none;
 }
 
 .modal_content {
-    width: 500px;
-    height: 400px;
-    background-color: #fff;
-    border-radius: 4px;
-    text-align: center;
-    padding: 20px;
-    position: relative;
-
+  width: 500px;
+  height: 400px;
+  background-color: #fff;
+  border-radius: 4px;
+  text-align: center;
+  padding: 20px;
+  position: relative;
 }
 
 input {
-    width: 50%;
-    display: block;
-    margin: 15px auto;
+  width: 50%;
+  display: block;
+  margin: 15px auto;
 }
 
-
 .close {
-    position: absolute;
-    right: 14px;
-    font-size: 40px;
-    transform: rotate(45deg);
-    top:0;
-    cursor: pointer;
-
+  position: absolute;
+  right: 14px;
+  font-size: 40px;
+  transform: rotate(45deg);
+  top: 0;
+  cursor: pointer;
 }
 
 /* ---------------END MODAL------------- */
 
-
 /* ----------------ABOUT PAGE---------- */
 
-    
 @media (max-width: 500px) {
   .wrapper {
     grid-template-columns: 4fr;
