added some images to about section

--- a/style/about.css
+++ b/style/about.css
@@ -1,6 +1,7 @@
 body {
-  margin: 0;
+  margin: 0px;
   font-family: "Teko", sans-serif;
+  
 }
 
 /* ------------nav----------------- */
@@ -48,21 +49,21 @@ nav {
 /*  */
 .about_wrapper {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  grid-template-rows: 110px ;
+  grid-template-columns: minmax(200px, 50%);
+  grid-template-rows: 110px auto;
   grid-template-areas:
     "nav nav nav"
     "about about about"
     "info info founder"
+    "scene scene scene"
     "about-footer about-footer about-footer";
-    
+    background: #f4f4f4;
 }
 
 .content_heading {
   grid-area: about;
   justify-content: center;
   align-content: center;
-  
 }
 
 .about_title {
@@ -76,43 +77,58 @@ nav {
   margin-bottom: 0%;
 }
 hr {
-    height: 0px;
-    width: 550px;
-    font-size: 15px;
-    color: #25aaf7;
-    line-height: 25px;
-    border-top: 3px solid #25aaf7;
-  }
+  height: 0px;
+  width: 550px;
+  font-size: 15px;
+  color: #25aaf7;
+  line-height: 25px;
+  border-top: 3px solid #25aaf7;
+}
 .lead {
   text-align: center;
-  font-size: 20px;
+  font-size: 25px;
   font-family: "Raleway", sans-serif;
+  margin-bottom: 1.5em;
 }
 
-p {
+.info-wrapper {
+  grid-area: info;
+}
+
+.one {
   font-family: "Open Sans";
   font-size: 15px;
   line-height: 25px;
-  grid-area: info;
-  grid-column-end: info;
+  margin: 10px 10px 0px 30px;
+  max-width: 90%;
+
 }
+
 .founder {
   grid-area: founder;
+  width: 90%;
+  margin: 0;
+}
+
+.scene {
+    background-image: url("../assets/scene.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    justify-content: center;
+    background-size: cover;
+    width: 100%;
+    min-height: 200px;
+
+}
+.scene-wrapper {
+    grid-area: scene;
+    max-height: 200px;
+    margin: 20px 0px 20px 0px;
+
 }
 
 footer {
   padding: 20px;
-  margin: 0;
   grid-area: about-footer;
   background-color: rgb(248, 237, 82);
-}
-
-@media (max-width:500px) {
-    .about_wrapper {grid-template-areas: 
-    "nav nav nav"
-    "about about about"
-    "info info info"
-    "founder founder founder"
-    "about-footer about-footer about-footer";
-    }
 }
