--- a/style/about.css
+++ b/style/about.css
@@ -1,7 +1,6 @@
 body {
   margin: 0px;
   font-family: "Teko", sans-serif;
-  
 }
 
 /* ------------nav----------------- */
@@ -56,8 +55,9 @@ nav {
     "about about about"
     "info info founder"
     "scene scene scene"
+    "guide local-kno local-kno"
     "about-footer about-footer about-footer";
-    background: #f4f4f4;
+  background: #f4f4f4;
 }
 
 .content_heading {
@@ -77,10 +77,7 @@ nav {
   margin-bottom: 0%;
 }
 hr {
-  height: 0px;
   width: 550px;
-  font-size: 15px;
-  color: #25aaf7;
   line-height: 25px;
   border-top: 3px solid #25aaf7;
 }
@@ -101,7 +98,6 @@ hr {
   line-height: 25px;
   margin: 10px 10px 0px 30px;
   max-width: 90%;
-
 }
 
 .founder {
@@ -111,24 +107,80 @@ hr {
 }
 
 .scene {
-    background-image: url("../assets/scene.jpg");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    justify-content: center;
-    background-size: cover;
-    width: 100%;
-    min-height: 200px;
-
+  background-image: url("../assets/scene.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  justify-content: center;
+  background-size: cover;
+  width: 100%;
+  min-height: 200px;
 }
 .scene-wrapper {
-    grid-area: scene;
-    max-height: 200px;
-    margin: 20px 0px 20px 0px;
-
+  grid-area: scene;
+  max-height: 200px;
+  margin: 20px 0px 20px 0px;
 }
 
-footer {
-  padding: 20px;
+.local {
+  grid-area: local-kno;
+  justify-content: center;
+  align-content: center;
+  margin-bottom: 20px;
+}
+
+.guide {
+  grid-area: guide;
+  width: 90%;
+  margin-left: 30px;
+  margin-bottom: 20px;
+}
+
+.local-heading {
+  text-align: center;
+  font-size: 25px;
+  font-family: "Raleway", sans-serif;
+  color: #343b49;
+  margin: 0%;
+}
+
+.two {
+  font-family: "Open Sans";
+  font-size: 15px;
+  line-height: 25px;
+  margin-left: 20px;
+  max-width: 90%;
+}
+.line {
+  height: 0px;
+  width: 220px;
+  font-size: 15px;
+  border-top: 1px solid #424d66;
+  
+}
+
+
+/* -------footer------ */
+
+.about_footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-area: about-footer;
-  background-color: rgb(248, 237, 82);
+  background-color: #456087;
+  color: white;
+}
+.company-name {
+  font-size: 45px;
+  margin-left: 20px;
+  margin-bottom: -15px;
+}
+.co-name1 {
+  color: orange;
+}
+
+.footer-p {
+  margin-top: 0;
+  font-family: "Open Sans";
+  font-size: 12px;
+  line-height: 25px;
+  margin-left: 25px;
 }
