before i start trying to make it responsive

--- a/style/about.css
+++ b/style/about.css
@@ -1,6 +1,11 @@
+html {
+    font-size: 100%;
+}
+
 body {
   margin: 0px;
   font-family: "Teko", sans-serif;
+  display: flex;
 }
 
 /* ------------nav----------------- */
@@ -137,7 +142,7 @@ hr {
 
 .local-heading {
   text-align: center;
-  font-size: 25px;
+  font-size: 35px;
   font-family: "Raleway", sans-serif;
   color: #343b49;
   margin: 0%;
@@ -152,18 +157,17 @@ hr {
 }
 .line {
   height: 0px;
-  width: 220px;
+  width: 295px;
   font-size: 15px;
   border-top: 1px solid #424d66;
-  
 }
-
 
 /* -------footer------ */
 
 .about_footer {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr auto 1fr;
+  grid-template-rows: 50px 1fr;
   grid-area: about-footer;
   background-color: #456087;
   color: white;
@@ -179,6 +183,28 @@ hr {
 
 .footer-p {
   margin-top: 0;
+  font-family: "Product Sans";
+  line-height: 25px;
+  margin-left: 25px;
+  grid-column-start: 1;
+  grid-row-start: 2;
+}
+.contact {
+  font-family: "Product Sans";
+  line-height: 25px;
+  letter-spacing: 1px;
+  grid-column-start: 4;
+  grid-row-start: 1;
+}
+.tele {
+    color: white;
+    text-decoration: none;
+}
+
+.copy {
+  grid-column-start: 1;
+  grid-row-start: 3;
+  margin-bottom: 0%;
   font-family: "Open Sans";
   font-size: 12px;
   line-height: 25px;
