--- a/style/style.css
+++ b/style/style.css
@@ -225,7 +225,8 @@ button:hover {
 
 .about_footer {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr auto 1fr;
+  grid-template-rows: 50px 1fr;
   grid-area: about-footer;
   background-color: #456087;
   color: white;
@@ -241,12 +242,33 @@ button:hover {
 
 .footer-p {
   margin-top: 0;
+  font-family: "Product Sans";
+  line-height: 25px;
+  margin-left: 25px;
+  grid-column-start: 1;
+  grid-row-start: 2;
+}
+.contact {
+  font-family: "Product Sans";
+  line-height: 25px;
+  letter-spacing: 1px;
+  grid-column-start: 4;
+  grid-row-start: 1;
+}
+.tele {
+    color: white;
+    text-decoration: none;
+}
+
+.copy {
+  grid-column-start: 1;
+  grid-row-start: 3;
+  margin-bottom: 0%;
   font-family: "Open Sans";
   font-size: 12px;
   line-height: 25px;
   margin-left: 25px;
 }
-
 
 /* -----------------MODAL------------ */
 
