--- a/style/about.css
+++ b/style/about.css
@@ -1,5 +1,5 @@
-html {
-    font-size: 100%;
+* {
+  box-sizing: border-box;
 }
 
 body {
@@ -10,6 +10,7 @@ body {
 
 /* ------------nav----------------- */
 nav {
+  display: flex;
   grid-area: nav;
   background-color: white;
   padding: 20px;
@@ -124,6 +125,7 @@ hr {
   grid-area: scene;
   max-height: 200px;
   margin: 20px 0px 20px 0px;
+  height: 100%;
 }
 
 .local {
@@ -197,8 +199,8 @@ hr {
   grid-row-start: 1;
 }
 .tele {
-    color: white;
-    text-decoration: none;
+  color: white;
+  text-decoration: none;
 }
 
 .copy {
@@ -209,4 +211,59 @@ hr {
   font-size: 12px;
   line-height: 25px;
   margin-left: 25px;
+}
+/* -------------media-------------------- */
+@media only screen and (max-width: 600px) {
+  .scene,
+  .scene-wrapper,
+  .footer-p,
+  .second-title {
+    display: none;
+  }
+  body,
+  .about_wrapper {
+    display: block;
+    width: 100%;
+  }
+  .contact {
+    font-family: "Product Sans";
+    letter-spacing: 1px;
+    grid-column-start: 1;
+    grid-row-start: 2;
+    text-align: center;
+  }
+  .about_footer {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto;
+    grid-area: about-footer;
+    background-color: #456087;
+    color: white;
+  }
+  .founder {
+    padding: 0px 0px 10px 35px;
+  }
+  .guide {
+    padding: 10px 30px 0px 0px;
+  }
+  .about_title {
+    text-align: center;
+    font-size: 35px;
+    font-family: "Raleway", sans-serif;
+    color: #343b49;
+    margin: 0%;
+  }
+  hr {
+    height: 0px;
+    width: 295px;
+    font-size: 15px;
+    border-top: 1px solid #424d66;
+  }
+  .navbar,.logo {
+    display: flex;
+    display: block;
+  }.logo {
+      text-align: center;
+      display: block;
+  }
 }
