added @media to home  page

--- a/style/style.css
+++ b/style/style.css
@@ -121,10 +121,7 @@ h2 {
   justify-self: center;
 }
 
-/* article {
-  background: white;
-  padding: 20px;
-} */
+
 
 h3 {
   font-size: 36px;
@@ -350,12 +347,10 @@ input {
     margin: 0%;
   }
   header {
-    display: block;
-    padding: 20px;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
-      url("../assets/hero_header-kayakers-media.jpg") center center cover
-        no-repeat fixed;
-
+    display: none;
+    
+    
+        
   }
   .navbar,
   .logo {
@@ -383,6 +378,30 @@ input {
     text-align: center;
     background-color: #f4f4f4;
     padding: 20px;
+  }
+ h2, 
+ .book_title, 
+ .how_it_works {
+  text-align: center;
+  font-size: 35px;
+  font-family: "Raleway", sans-serif;
+  color: #343b49;
+  margin: 0%;
+ }
+ .adventure_info{
+  font-family: "Open Sans";
+  font-size: 15px;
+  line-height: 25px;
+  margin: 10px 10px 20px 30px;
+  max-width: 90%;
+ }
+ article {
+   background-color: #fff;
+   border: rgb(238, 231, 231) 1px solid;
+   margin-top: 10px;;
+ }
+ img {
+   margin-top: 8px;;
+ }
+
 }
-}
-    
